@@ -1179,7 +1179,7 @@ __ZNK7WebCore12RenderObject23absoluteBoundingBoxRectEb
 __ZNK7WebCore12RenderObject14enclosingLayerEv
 __ZNK7WebCore12RenderObject15localToAbsoluteERKNS_10FloatPointEbb
 __ZNK7WebCore12RenderObject7childAtEj
-__ZNK7WebCore12RenderObject13styleSlowCaseEv
+__ZNK7WebCore12RenderObject13styleInRegionEv
 __ZNK7WebCore12RenderWidget14windowClipRectEv
 __ZNK7WebCore12SharedBuffer11getSomeDataERPKcj
 __ZNK7WebCore12SharedBuffer4dataEv
